cmake_minimum_required(VERSION 4.0)
project(types_and_data_structures)

set(CMAKE_CXX_STANDARD 14)

add_executable(A_1 Sorting/A.cpp)
add_executable(B_1 Sorting/B.cpp)
add_executable(C_1 Sorting/C.cpp)
add_executable(D_1 Sorting/D.cpp)
add_executable(E_1 Sorting/E.cpp)
add_executable(F_1 Sorting/F.cpp)
add_executable(G_1 Sorting/G.cpp)
add_executable(H_1 Sorting/H.cpp)
add_executable(I_1 Sorting/I.cpp)
add_executable(J_1 Sorting/J.cpp)
add_executable(K_1 Sorting/K.cpp)
add_executable(L_1 Sorting/L.cpp)

