cmake_minimum_required(VERSION 4.0)
project(types_and_data_structures)

set(CMAKE_CXX_STANDARD 14)

add_executable(A_1 Sorting/A.cpp)
add_executable(B_1 Sorting/B.cpp)
add_executable(C_1 Sorting/C.cpp)
add_executable(D_1 Sorting/D.cpp)
add_executable(E_1 Sorting/E.cpp)
add_executable(F_1 Sorting/F.cpp)
add_executable(G_1 Sorting/G.cpp)
add_executable(H_1 Sorting/H.cpp)
add_executable(I_1 Sorting/I.cpp)
add_executable(J_1 Sorting/J.cpp)
add_executable(K_1 Sorting/K.cpp)
add_executable(L_1 Sorting/L.cpp)

add_executable(A_2 Containers/A.cpp)
add_executable(B_2 Containers/B.cpp)
add_executable(C_2 Containers/C.cpp)
add_executable(D_2 Containers/D.cpp)
add_executable(E_2 Containers/E.cpp)
add_executable(F_2 Containers/F.cpp)
add_executable(G_2 Containers/G.cpp)
add_executable(H_2 Containers/H.cpp)

add_executable(A_3 Binary_search/A.cpp)
add_executable(B_3 Binary_search/B.cpp)
add_executable(C_3 Binary_search/C.cpp)
add_executable(D_3 Binary_search/D.cpp)
add_executable(E_3 Binary_search/E.cpp)
add_executable(F_3 Binary_search/F.cpp)
add_executable(G_3 Binary_search/G.cpp)
add_executable(H_3 Binary_search/H.cpp)
add_executable(I_3 Binary_search/I.cpp)

add_executable(A_4 Heap/A.cpp)
add_executable(B_4 Heap/B.cpp)
add_executable(C_4 Heap/C.cpp)
add_executable(D_4 Heap/D.cpp)
add_executable(E_4 Heap/E.cpp)
add_executable(F_4 Heap/F.cpp)
add_executable(G_4 Heap/G.cpp)

add_executable(A_5 Binary_search_trees/A.cpp)
add_executable(B_5 Binary_search_trees/B.cpp)
add_executable(C_5 Binary_search_trees/C.cpp)
add_executable(D_5 Binary_search_trees/D.cpp)
add_executable(E_5 Binary_search_trees/E.cpp)
add_executable(F_5 Binary_search_trees/F.cpp)
add_executable(G_5 Binary_search_trees/G.cpp)
add_executable(H_5 Binary_search_trees/H.cpp)
add_executable(I_5 Binary_search_trees/I.cpp)
add_executable(J_5 Binary_search_trees/J.cpp)
add_executable(K_5 Binary_search_trees/K.cpp)